<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:id="@+id/nama"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_below="@+id/nama"
        android:id="@+id/ednama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/hint"
        />
    <TextView
        android:id="@+id/nim"
        android:layout_below="@+id/ednama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/nim"
        />
    <EditText
        android:layout_below="@+id/nim"
        android:id="@+id/ednim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/hint"
        />

    <TextView
        android:id="@+id/alamat"
        android:layout_below="@+id/ednim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/alamat"
        />
    <EditText
        android:layout_below="@+id/alamat"
        android:id="@+id/edalamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/hint"
        />



</RelativeLayout>