<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kode"
        android:id="@+id/namamatkul"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_below="@+id/namamatkul"
        android:id="@+id/ednamamatkul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/hint"
        />
    <TextView
        android:id="@+id/kodematkul"
        android:layout_below="@+id/ednamamatkul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/namamk"
        />
    <EditText
        android:layout_below="@+id/kodematkul"
        android:id="@+id/edkodematkul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:hint="@string/hint"
        />


</RelativeLayout>